Improvements to permalink, bug fix for overflow

--- a/static/css/style-bootstrap.css
+++ b/static/css/style-bootstrap.css
@@ -1,5 +1,5 @@
 html {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 body {
